--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,7 +58,7 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   assets:
-    - assets/profile.jpeg
+    - assets/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
